@@ -92,5 +92,12 @@
             <version>0.1.8.38-ALPHA</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>nl.pim16aap2.BigDoors</groupId>
+            <artifactId>hook-konquest</artifactId>
+            <version>0.1.8.38-ALPHA</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
