@@ -99,8 +99,17 @@ public abstract class ProtectionCompatDefinition implements IProtectionCompatDef
         }
     };
 
+    public static final IProtectionCompatDefinition KONQUEST = new ProtectionCompatDefinition("Konquest")
+    {
+        @Override
+        public Class<? extends IProtectionCompat> getClass(String version)
+        {
+            return KonquestProtectionCompat.class;
+        }
+    };
+
     public static final List<IProtectionCompatDefinition> DEFAULT_COMPAT_DEFINITIONS = Collections.unmodifiableList(
-        Arrays.asList(TOWNY, PLOTSQUARED, WORLDGUARD, GRIEFPREVENTION, LANDS, REDPROTECT, GRIEF_DEFENDER));
+        Arrays.asList(TOWNY, PLOTSQUARED, WORLDGUARD, GRIEFPREVENTION, LANDS, REDPROTECT, GRIEF_DEFENDER, KONQUEST));
 
     private final String name;
 
