@@ -33,6 +33,8 @@
         <module>hook-world-guard-7</module>
         <module>hook-world-guard-6</module>
 
+        <module>hook-konquest</module>
+
         <module>hooks-bundle</module>
     </modules>
 
